Update image paths in index.html

--- a/tributePage/index.html
+++ b/tributePage/index.html
@@ -17,7 +17,7 @@
             <span>&#9658;</span>
         </div>
 
-        <img src="assets/gaur1.png" alt="Gaur Gopal Das" class="hero-img">
+        <img src="gaur1.png" alt="Gaur Gopal Das" class="hero-img">
     </header>
 
     <!-- QUOTE SECTION -->
@@ -27,7 +27,7 @@
 
     <!-- IMAGE SECTION -->
     <section class="profile-img">
-        <img src="assets/gaur2.jpg" alt="Gaur Gopal Das Photo">
+        <img src="gaur2.jpg" alt="Gaur Gopal Das Photo">
     </section>
 
     <!-- BIO SECTION -->
