--- a/to-do app/index.html
+++ b/to-do app/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Daily To-Do App</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="app-container">
+        <h1>Daily To-Do List</h1>
+
+        <!-- Add Task Section -->
+        <div class="add-task">
+            <input type="text" id="taskInput" placeholder="Enter a new task...">
+            <button id="addTaskBtn">Add Task</button>
+        </div>
+
+        <!-- Pending Tasks Section -->
+        <div class="section">
+            <h2>Pending Tasks</h2>
+            <ul id="pendingList" class="task-list"></ul>
+        </div>
+
+        <!-- Completed Tasks Section -->
+        <div class="section">
+            <h2>Completed Tasks</h2>
+            <ul id="completedList" class="task-list"></ul>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
 
